Reset sources for azure-communication-email to the release version 1.0.4.